[#727] disable his refts

--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -49,7 +49,7 @@
             <select class="form-control" name="resource-type" id="resource-type">
                 <option value="GenericResource">Generic</option>
                 <option value="RasterResource">Geographic Raster</option>
-                <option value="RefTimeSeries">HIS Referenced Time Series</option>
+{#              <option value="RefTimeSeries">HIS Referenced Time Series</option> #}
                 <option value="ModelProgramResource">Model Program</option>
                 <option value="ModelInstanceResource">Model Instance</option>
                 <option value="SWATModelInstanceResource">SWAT Model Instance</option>
