--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2338,12 +2338,14 @@
                             this.remove();
                         });
                         $(".alert-success").fadeTo(2000, 500).fadeOut(1000, function(){
+                            $(document).trigger(jQuery.Event("submit-success"));
                             $(".alert-success").alert('close');
                         });
                     }
                     else{
                         $('body > .container').append($alert_error);
                         $(".alert-danger").fadeTo(3000, 500).fadeOut(1000, function(){
+                            $(document).trigger(jQuery.Event("submit-error"));
                             $(".alert-danger").alert('close');
                         });
                     }
@@ -2352,6 +2354,7 @@
                 {
                     $('#' + form_id).before($alert_error)
                     $(".alert-error").fadeTo(2000, 500).slideUp(1000, function(){
+                        $(document).trigger(jQuery.Event("submit-error"));
                         $(".alert-error").alert('close');
                     });
                 }
