cleaned up multi-select lists for long file names [#632]

--- a/hs_model_program/static/css/model_program.css
+++ b/hs_model_program/static/css/model_program.css
@@ -49,3 +49,8 @@ table{
     max-width:550px;
 }
 
+/* Activate multi-line list elements in the droplist.
+   This makes long filenames look nice.  */
+.multiselect-container > li > a {
+    white-space: normal;
+}
