Color code for filters Profile link now directs to profile page Added edit profile link in profile page

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2347,7 +2347,7 @@
             </div>
         </div>
 
-        <div class="modal fade in" id="add-contributor-dialog" tabindex="-1" role="dialog"
+        <div class="modal fade in" id="add-contributor-dialog" tabindex="-1" 'role="dialog"
              aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
