--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% load geoanalytics_tags pages_tags mezzanine_tags keyword_tags comment_tags hydroshare_tags %}
 
 {# {% block title %}{{ user|best_name }}'s Resources{% endblock %}#}
 {% block title %}Resources{% endblock %}
@@ -19,19 +18,18 @@
         			</tbody>
     			</table>
 			</form>
-			<h4>By Author</h4>
-			<div>
-    			<dl>
-        			{% if facets.fields.author %}
-            			<dt>Author</dt>
-            			{% for author in facets.fields.author|slice:":5" %}
-                			<dd><a href="{{ request.get_full_path }}&amp;selected_facets=author_exact:{{ author.0|urlencode }}">{{ author.0 }}</a> ({{ author.1 }})</dd>
-            			{% endfor %}
-        			{% else %}
-            			<p>No author facets.</p>
-       				{% endif %}
-    			</dl>
-			</div>
+			
+            {% for key, value in facets.fields.items %}
+                <h4> Faceted By {{ key }}</h4>
+                <ul class="list-group">
+                {% for item in value %}
+                        <li class="list-group-item">
+                            <span class="label label-default label-pill pull-right">({{ item.1 }})</span>
+                            <a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>
+                        </li>
+                {% endfor %}
+                </ul>
+            {% endfor %}
         </div>
        	<div class="col-lg-9" id="items">
        		<table class="table table-striped table-hover" id="item-selectors">
