--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1208,8 +1208,7 @@ table.table-plain td{
 #coverageTab{
     overflow-x:hidden;
 }
-.tab-elements > .tabs-body{
-    max-height: 400px;
+.tab-elements > .tabs-body {
     min-height: 150px;
     border: 1px solid #ddd;
     padding: 10px;
@@ -2275,6 +2274,7 @@ button.loading {
 .profile-pic {
 	width: 150px;
 	height: 150px;
+	margin-right: 10px;
 }
 
 .profile-pic-thumbnail {
@@ -2368,17 +2368,29 @@ div.affiliation {
 
 .activity-block {
 	border-top: 1px solid #ddd;
-    margin-top: 30px;
-    padding-top: 15px;
+	margin-bottom: 20px;
+	margin-right: 0;
+	margin-left: 0;
+}
+
+#overview .activity-block {
+	float: left;
+	padding-top: 10px;
+	width: 100%;
+}
+
+.activity-info {
+	margin-bottom: 5px;
 }
 
 .activity-description {
-	border-left: 1px solid #ddd;
+	float: left;
+	border-left: 3px solid #CCC;
+	display: none;
 }
 
-.activity-description p.description {
-	max-height: 80px;
-  	overflow: hidden;
+.activity-description p {
+	color: #757575;
 }
 
 #overview .activity-block:first-child {
@@ -2387,9 +2399,9 @@ div.affiliation {
 	padding-top:0;
 }
 
-.activity-description .show-more-btn {
-	position: absolute;
-	width: calc(100% - 30px);
+.show-more-btn {
+	width: 50px;
+	margin-left: 10px;
 	-webkit-border-radius: 8px;
 	-moz-border-radius: 8px;
 	border-radius: 8px;
@@ -2397,22 +2409,18 @@ div.affiliation {
 	color: #AAA;
 	border: 1px solid #ddd;
 	font-size: 12px;
-}
-
-.activity-description .show-more-btn:hover {
 	cursor: pointer;
-	background: #EEE;
 }
 
-.show-hide {
-    color: #757575;
-    text-decoration: none;
-    margin-top: 10px;
-    display: block;
+#contributions .show-more-btn {
+	float: left;
 }
 
-.show-hide:hover, .show-hide:focus {
-    color: #333333;
+.abstract-block {
+	color: #757575;
+	border-left: 3px solid #CCC;
+	padding-left: 5px;
+	  margin-top: 10px;
 }
 
 table.overview tr > td:first-child {
@@ -2420,14 +2428,25 @@ table.overview tr > td:first-child {
 }
 
 .icon-resource-type {
-    text-align: center;
-    float: left;
+	text-align: center;
+	border: 1px solid #ddd;
+	padding: 8px;
+	border-radius: 0 0 4px 4px;
+
+	background-color: #FFF;
 }
 
 .icon-resource-type > .glyphicon{
-    font-size: 45px;
+    font-size: 18px;
     color: #35AAC0;
-	float: left;
+	top: 3px;
+}
+
+.icon-resource-type-wrapper {
+	float: right;
+	margin-top: -2px;
+	margin-right: 20px;
+	margin-bottom: 10px;
 }
 
 .table-user-contributions tbody > tr > td {
@@ -2435,12 +2454,13 @@ table.overview tr > td:first-child {
     cursor:pointer;
 }
 
-.table-user-contributions tbody > tr.active td:first-child {
-	font-weight:bold;
+.table-user-contributions tbody > tr.active {
+	border-left: 4px solid #0A91AB;
+	pointer-events: none;
 }
 
-.table-user-contributions tbody > tr.active {
-	pointer-events: none;
+.table-user-contributions tbody > tr.active td:first-child {
+	font-weight:bold;
 }
 
 h4.title {
